local/logs/project.log
2019-11-14T03:00:45.595Z - normal: Load ~/.CocosCreator/settings.json
2019-11-14T03:00:46.791Z - normal: Initializing Asset Database
2019-11-14T03:00:46.799Z - normal: checking language setting...
2019-11-14T03:00:46.799Z - normal: Language: en
2019-11-14T03:00:47.431Z - success: preview server running at http://localhost:7456
2019-11-14T03:00:47.435Z - success: protocol editor-framework registered
2019-11-14T03:00:47.435Z - success: protocol app registered
2019-11-14T03:00:47.435Z - success: protocol theme registered
2019-11-14T03:00:47.435Z - success: protocol packages registered
2019-11-14T03:00:47.435Z - success: protocol uuid registerred
2019-11-14T03:00:47.435Z - success: protocol db registerred
2019-11-14T03:00:47.435Z - success: protocol thumbnail registerred
2019-11-14T03:00:47.435Z - success: protocol unpack registerred
2019-11-14T03:00:47.435Z - success: protocol disable-commonjs registerred
2019-11-14T03:00:48.917Z - normal: connected!
2019-11-14T03:00:48.921Z - normal: Check project C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change
2019-11-14T03:00:48.921Z - normal: Initializing project C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change
2019-11-14T03:00:49.309Z - normal: Initializing Cocos2d
2019-11-14T03:00:50.130Z - normal: Initializing engine extends
2019-11-14T03:00:50.144Z - success: alipay-adapter loaded
2019-11-14T03:00:50.148Z - success: asset-db-debugger loaded
2019-11-14T03:00:50.152Z - success: baidu-adapter loaded
2019-11-14T03:00:50.152Z - success: color-picker loaded
2019-11-14T03:00:50.264Z - success: fb-audience-network loaded
2019-11-14T03:00:50.316Z - success: fb-live-stream loaded
2019-11-14T03:00:50.320Z - success: google-play-instant loaded
2019-11-14T03:00:50.324Z - success: huawei-runtime loaded
2019-11-14T03:00:50.540Z - success: cpk-publish loaded
2019-11-14T03:00:50.544Z - success: jsb-adapter loaded
2019-11-14T03:00:50.548Z - success: oppo-runtime loaded
2019-11-14T03:00:50.551Z - success: package-manager loaded
2019-11-14T03:00:50.664Z - success: qqplay-adapter loaded
2019-11-14T03:00:50.668Z - success: runtime-dev-tools loaded
2019-11-14T03:00:50.672Z - success: sdkbox loaded
2019-11-14T03:00:50.672Z - success: tester loaded
2019-11-14T03:00:50.676Z - success: ui-kit-preview-extra loaded
2019-11-14T03:00:50.676Z - success: ui-kit-preview loaded
2019-11-14T03:00:50.676Z - success: ui-kit loaded
2019-11-14T03:00:50.684Z - success: vivo-runtime loaded
2019-11-14T03:00:50.684Z - success: weapp-adapter loaded
2019-11-14T03:00:50.684Z - success: xiaomi-adapter loaded
2019-11-14T03:00:50.688Z - success: alipay-minigame loaded
2019-11-14T03:00:50.728Z - success: assets loaded
2019-11-14T03:00:50.732Z - success: builder loaded
2019-11-14T03:00:50.980Z - success: cocos-services loaded
2019-11-14T03:00:50.984Z - success: console loaded
2019-11-14T03:00:51.020Z - success: fb-instant-games loaded
2019-11-14T03:00:51.020Z - success: game-window loaded
2019-11-14T03:00:51.024Z - success: google-instant-games loaded
2019-11-14T03:00:51.028Z - success: hierarchy loaded
2019-11-14T03:00:51.028Z - success: inspector loaded
2019-11-14T03:00:51.032Z - success: keystore loaded
2019-11-14T03:00:51.036Z - success: node-library loaded
2019-11-14T03:00:51.036Z - success: package-asset loaded
2019-11-14T03:00:51.040Z - success: preferences loaded
2019-11-14T03:00:51.040Z - success: project-exporter loaded
2019-11-14T03:00:51.040Z - success: project-importer loaded
2019-11-14T03:00:51.044Z - success: project-settings loaded
2019-11-14T03:00:51.048Z - success: scene loaded
2019-11-14T03:00:51.048Z - success: simulator-debugger loaded
2019-11-14T03:00:51.048Z - success: sprite-editor loaded
2019-11-14T03:00:51.052Z - success: store loaded
2019-11-14T03:00:51.056Z - success: timeline loaded
2019-11-14T03:00:51.060Z - success: xiaomi-runtime loaded
2019-11-14T03:00:52.053Z - warn: [db-task][init] uuid collision, the uuid(adc8904b-b626-472c-a778-5727acb14b7e) for C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change\assets\wavy.PNG is already used. A new uuid(424a9667-e768-4892-a213-2a459ec5f0bc) will be assigned.
2019-11-14T03:00:52.057Z - warn: [db-task][init] uuid collision, the uuid(42746472-abde-4af6-8447-fc8150e50f9c) for C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change\assets\wavy.PNG\wavy is already used. A new uuid(0db2f99e-1600-4cdf-b852-7ae3b4dccb4d) will be assigned.
2019-11-14T03:00:53.513Z - failed: [db-task][init] Failed to import asset C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change\assets\Scripts\moneyCarbFoot.js, message: Compile error: SyntaxError: C:/Users/brand/OneDrive/Documents/GitHub/reverse-climate-change/assets/Scripts/moneyCarbFoot.js: Unexpected token (33:4)
  31 |     {
  32 |         var delta = 
> 33 |     },
     |     ^
  34 | 
  35 |     // update (dt) {},
  36 | });
    at Parser.pp$5.raise (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$1.parseVar (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:2340:24)
    at Parser.pp$1.parseVarStatement (C:\CocosCreator_2.1.3\resources\app.asar\node_modules\babylon\lib\index.js:2169:8)
2019-11-14T03:00:54.512Z - failed: [db-task][init] Failed to import asset C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change\assets\try one.fire, message: SyntaxError: C:\Users\brand\OneDrive\Documents\GitHub\reverse-climate-change\assets\try one.fire: Unexpected token < in JSON at position 295
    at JSON.parse (<anonymous>)
    at C:\CocosCreator_2.1.3\resources\app.asar\node_modules\fire-fs\node_modules\jsonfile\index.js:36:18
    at C:\CocosCreator_2.1.3\resources\app.asar\node_modules\graceful-fs\graceful-fs.js:115:16
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:439:3)
2019-11-14T03:00:55.088Z - normal: Loading packages
2019-11-14T03:00:55.096Z - normal: Watching packages
2019-11-14T03:00:55.532Z - normal: Run Application
2019-11-14T03:00:55.922Z - info: Cocos Services load base data!
2019-11-14T03:01:01.284Z - warn: The Asset used by component "canvasclick" in scene "try one.fire" is missing. Detailed information:
Node path: "Canvas"
Asset url: "db://assets/try one.fire"
Missing uuid: "c97647a4-43aa-4bfd-83d4-e582134b02a7"

2019-11-14T03:01:01.284Z - warn: The Asset used by component "upgradetype" in scene "try one.fire" is missing. Detailed information:
Node path: "Canvas/Grass"
Asset url: "db://assets/try one.fire"
Missing uuid: "971ba590-720c-4661-92c6-b4f8bcc8871e"

2019-11-14T03:01:01.288Z - warn: The Asset used by component "add button" in scene "try one.fire" is missing. Detailed information:
Node path: "Menu_button"
Asset url: "db://assets/try one.fire"
Missing uuid: "c97647a4-43aa-4bfd-83d4-e582134b02a7"

2019-11-14T03:01:01.296Z - error: TypeError: Cannot read property '_onBatchCreated' of undefined
    at cc_Scene._onBatchCreated (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCNode.js:784:32)
    at cc_Scene._load (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCScene.js:60:30)
    at cc.Director.runSceneImmediate (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCDirector.js:180:23)
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCDirector.js:328:42
    at CCLoader.<anonymous> (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\platform\CCAssetLibrary.js:65:25)
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\load-pipeline\CCLoader.js:141:46
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\platform\utils.js:49:25
    at _combinedTickCallback (internal/process/next_tick.js:73:7)
    at process._tickCallback (internal/process/next_tick.js:104:9)
2019-11-14T03:04:02.151Z - error: TypeError: Cannot read property '_onBatchCreated' of undefined
    at cc_Scene._onBatchCreated (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCNode.js:784:32)
    at cc_Scene._load (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCScene.js:60:30)
    at cc.Director.runSceneImmediate (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCDirector.js:180:23)
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\CCDirector.js:328:42
    at CCLoader.<anonymous> (C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\platform\CCAssetLibrary.js:65:25)
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\load-pipeline\CCLoader.js:141:46
    at C:\CocosCreator_2.1.3\resources\engine\bin\.cache\dev\cocos2d\core\platform\utils.js:49:25
    at _combinedTickCallback (internal/process/next_tick.js:73:7)
    at process._tickCallback (internal/process/next_tick.js:104:9)
